@@ -1,3 +1,4 @@
+0.18.2-0 @11/04/2004 17:00:00 UTC@
 0.18.1-0 @10/30/2004 03:20:00 UTC@
 0.18.0-0 @10/29/2004 20:35:00 UTC@
 0.17.1-0 @09/11/2004 21:25:00 UTC@
